--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/smberp
 spring.datasource.username=root
 spring.datasource.password=admin52
 
+spring.jpa.hibernate.use-new-id-generator-mappings=false
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 
