--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# Server default port is 8080, change port here
+server.port=8008
+
 #primefaces config
 joinfaces.jsf.project-stage=development
 joinfaces.primefaces.theme=california-alive
