--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,36 @@
 # Server default port is 8080, change port here
 server.port=8008
 
+# Enable response compression
+server.compression.enabled=true
+
+# The comma-separated list of mime types that should be compressed
+server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javascript,application/javascript,application/json
+
+# Compress the response only if the response size is at least 1KB
+server.compression.min-response-size=1024
+
+# Enable HTTP/2 support, if the current environment supports it
+server.http2.enabled=true
+
+#multipart fileupload
+spring.servlet.multipart.enabled=true
+
+# Write files to disk if the file size is more than 2KB.
+spring.servlet.multipart.file-size-threshold=2KB
+
+# The intermediate disk location where the uploaded files are written
+spring.servlet.multipart.location=/tmp
+
+# Maximum file size that can be uploaded
+spring.servlet.multipart.max-file-size=50MB
+
+# Maximum allowed multipart request size
+spring.servlet.multipart.max-request-size=75MB
+
+spring.messages.basename=messages,validation
+spring.messages.fallback-to-system-locale=false
+
 #primefaces config
 joinfaces.jsf.project-stage=development
 joinfaces.primefaces.theme=california-alive
