--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     </parent>
     <groupId>com.smb.erp</groupId>
     <artifactId>SmbErp</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.2-DEV</version>
     <packaging>jar</packaging>
     <name>SmbErp</name>
     <description>SMB ERP Project</description>
