--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     </parent>
     <groupId>com.smb.erp</groupId>
     <artifactId>SmbErp</artifactId>
-    <version>0.2-DEV</version>
+    <version>0.3-DEV</version>
     <packaging>jar</packaging>
     <name>SmbErp</name>
     <description>SMB ERP Project</description>
@@ -97,6 +97,12 @@
             <groupId>com.primefaces.california</groupId>
             <artifactId>primefaces-california</artifactId>
             <version>2.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.primefaces.daimond</groupId>
+            <artifactId>primefaces-diamond</artifactId>
+            <version>1.0</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/net.sf.barcode4j/barcode4j -->
