--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
                 <artifactId>primefaces</artifactId>
                 <version>7.0</version>
             </dependency>
+            <dependency>
+                <groupId>org.primefaces.extensions</groupId>
+                <artifactId>primefaces-extensions</artifactId>
+                <version>7.0.3</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -96,7 +101,7 @@
         <dependency>
             <groupId>com.primefaces.diamond</groupId>
             <artifactId>primefaces-diamond</artifactId>
-            <version>1.0</version>
+            <version>1.2</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/net.sf.barcode4j/barcode4j -->
@@ -118,6 +123,23 @@
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
             <version>1.9.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.17</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.17</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.13</version>
         </dependency>
 
     </dependencies>
