--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,11 +41,16 @@ joinfaces.jsf.state-saving-method=server
 
 #hibernate mysql config
 spring.jpa.hibernate.ddl-auto=none
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/smberp
 spring.datasource.username=root
 spring.datasource.password=admin52
 
 joinfaces.jsf.datetimeconverter-default-timezone-is-system-timezone=true
+
+#allow lazy objects to be merged
+spring.jpa.properties.hibernate.event.merge.entity_copy_observer=allow
+
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
