--- a/pom.xml
+++ b/pom.xml
@@ -56,13 +56,6 @@
             <artifactId>primefaces-spring-boot-starter</artifactId>
         </dependency>
 
-        <!-- MySQL -->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <scope>runtime</scope>
-        </dependency>
-
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -97,6 +90,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+
+        <!-- MySQL -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+
 
         <dependency>
             <groupId>com.primefaces.diamond</groupId>
@@ -140,6 +140,37 @@
             <groupId>com.itextpdf</groupId>
             <artifactId>itextpdf</artifactId>
             <version>5.5.13</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>com.lapis.jsfexporter</groupId>
+            <artifactId>jsf-exporter-core</artifactId>
+            <version>1.0.3.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>com.lapis.jsfexporter</groupId>
+            <artifactId>export-type-csv</artifactId>
+            <version>1.0.3.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>com.lapis.jsfexporter</groupId>
+            <artifactId>export-type-excel</artifactId>
+            <version>1.0.3.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>com.lapis.jsfexporter</groupId>
+            <artifactId>export-type-pdf</artifactId>
+            <version>1.0.3.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>com.lapis.jsfexporter</groupId>
+            <artifactId>export-type-xml</artifactId>
+            <version>1.0.3.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>com.lapis.jsfexporter</groupId>
+            <artifactId>export-source-primefaces</artifactId>
+            <version>1.0.3.Final</version>
         </dependency>
 
     </dependencies>
