--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,7 +42,7 @@ joinfaces.jsf.state-saving-method=server
 #hibernate mysql config
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/smberp?useSSL=false&seJDBCCompliantTimezoneShift=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/smberp?useSSL=false&allowPublicKeyRetrieval=true&seJDBCCompliantTimezoneShift=true
 spring.datasource.username=admin
 spring.datasource.password=admin53786
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
