--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,6 +28,7 @@ spring.servlet.multipart.max-file-size=50MB
 # Maximum allowed multipart request size
 spring.servlet.multipart.max-request-size=75MB
 
+joinfaces.jsf.facelets-buffer-size=131072
 spring.messages.basename=messages,validation
 spring.messages.fallback-to-system-locale=false
 
