--- a/pom.xml
+++ b/pom.xml
@@ -112,9 +112,9 @@
         <dependency>
             <groupId>net.sourceforge.dynamicreports</groupId>
             <artifactId>dynamicreports-core</artifactId>
-            <version>6.11.1</version>
+            <version>6.12.0</version>
         </dependency>
-        
+
         <!-- https://mvnrepository.com/artifact/net.coobird/thumbnailator -->
         <dependency>
             <groupId>net.coobird</groupId>
@@ -161,6 +161,12 @@
             <version>5.5.13</version>
         </dependency>
         
+        <dependency>
+            <groupId>com.pdfexporter</groupId>
+            <artifactId>pdf-exporter-lowagie</artifactId>
+            <version>2.1.7.js7</version>
+        </dependency>
+
         <dependency>
             <groupId>com.lapis.jsfexporter</groupId>
             <artifactId>jsf-exporter-core</artifactId>
